# crazyflie-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
bindings/: cffirmware.i  setup.py
cmake/: CMakeListsold.txt  all_libs.cmake  board.cmake  cf2.cmake  gcc-arm-none-eabi.cmake  top.cmake
cmake/src/: cmsis_dsp.cmake  deck.cmake  freertos.cmake  hal.cmake  helper.cmake  include_dirs.cmake  libs.cmake  modules.cmake  platform.cmake  stm32.cmake  utils.cmake
configs/: cf2_defconfig
examples/app_hello_world/: Makefile
examples/app_hello_world-cpp/src/: dds_app.c  dds_app.h  hello_world.cpp
examples/app_internal_param_log/src/: internal_param_log.cpp
examples/rls_controller/: README.md
examples/rls_controller/src/: Kbuild  controller_rls.c  controller_rls.h  hello_world.c  math_lib.c  math_lib.h  position_controller_rls.c  position_controller_rls.h  rls.c  rls_controller.c  utils.c  utils.h
sitl/: CMakeLists.txt
sitl/app/: CMakeLists.txt
sitl/app/src/: main.c  main.cpp
src/config/: FreeRTOSConfig.h  autoconf.h  config.h
src/deck/: CMakeLists.txt
src/drivers/: CMakeLists.txt
src/hal/: CMakeLists.txt
src/hal/src/: sensors_bmi088_bmp388.c  sensors_bmi088_bmp3xx.c  usblink.c  usec_time_sim.c
src/init/: CMakeLists.txt  Kbuild  startup_stm32f405xx.s
src/init/include/: app.h
src/init/src/: app.c
src/lib/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/modules/interface/: commander.h  log.h  log_sitl.h  param.h  param_sitl.h  static_mem.h  system.h
src/modules/interface/controller/: controller.h  controller_rls.h  math_lib.h  utils.h
src/modules/src/: Kconfig  commander.c  console.c  crtp.c  crtp_commander_high_level.c  crtp_localization_service.c  log.c  mem_sitl.c  platformservice.c  stabilizer.cpp  stabilizer_sitl.cpp  static_mem_sitl.c  system.c  system.cpp  system_old.c  system_sitl.cpp
src/modules/src/controller/: Kbuild  controller.c  controller_rls.c  math_lib.c  utils.c
src/modules/src/estimator/: estimator_kalman.c
src/platform/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/utils/interface/: cfassert.h  statsCnt.h
src/utils/src/: filter.c  version_gen.c
test_python/: test_controller_rls.py  test_selv.py
tools/make/F405/linker/: STM32F405RGTx_FLASH.ld
